# wetest

./: .gitignore  README.md  ltest.sln  weconsole.sln
3rd/libs/Debug/: libprotobuf.lib
lnetwork/: framework.h  lnetwork.cpp  lnetwork.vcxproj  lnetwork.vcxproj.filters  lnetwork_def.h  lnetwork_init.h  lsignal_listener.h  ltcp_select_server.cpp  ltcp_select_server.h  ltcp_select_session.cpp  ltcp_select_session.h  pch.h
ltest/: class_construct.h  class_stream.h  echo_service.pb.cc  echo_service.pb.h  ltest.vcxproj  stdafx.h  test_class_singleton.cpp  test_class_stream.cpp  test_list.cpp  test_protobuf.cpp
props/: 3rd Static Libraries.props
proto/: echo_service.proto  proto_options.proto
we_gtest/: CMakeLists.txt  class_construct.h  class_singleton.h  common.h  cstream.h  echo_service.pb.cc  echo_service.pb.h  main.cpp  stdafx.h  test_class_construct.cpp  test_class_stream.cpp  test_cstream.cpp  test_list.cpp  test_map.cpp  test_protobuf.cpp  test_stl.cpp  test_vector.cpp  we_gtest.vcxproj  we_gtest.vcxproj.filters
we_gtest/x64/Debug/: vc143.idb  we_gtest.exe.recipe
we_gtest/x64/Debug/we_gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  we_gtest.lastbuildstate
we_gtest/x64/Release/: we_gtest.exe.recipe  we_gtest.iobj  we_gtest.ipdb
we_gtest/x64/Release/we_gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  we_gtest.lastbuildstate
weconsole/: weconsole.cpp  weconsole.vcxproj  weconsole.vcxproj.filters
(+1 files in other folders)
